--- a/src/main/resources/webapp/static/components/page/bus/bus.css
+++ b/src/main/resources/webapp/static/components/page/bus/bus.css
@@ -28,9 +28,9 @@
       display: inline-block;
       margin-left: 5px; }
     .page-bus .bus-header .void {
-      background-color: #00BB9C; }
+      background-color: #B8BA98; }
     .page-bus .bus-header .order {
-      background-color: #33475F; }
+      background-color: #947DAA; }
   .page-bus .bus-body {
     width: 100%;
     text-align: center;
