--- a/src/main/resources/webapp/static/components/page/relation/query/query.html
+++ b/src/main/resources/webapp/static/components/page/relation/query/query.html
@@ -3,7 +3,7 @@
         <div class="mui-input-row mui-search mui-pull-left" style="width: 80%">
             <input type="search" class="mui-input-clear" placeholder="请输入姓名查询" v-model="name" >
         </div>
-        <a class="mui-pull-right mui-btn-link" href="#relation">取消</a>
+        <a class="mui-pull-right mui-btn-link" v-on="click:backTo('relation')">取消</a>
     </header>
     <div class="mui-content" v-if="list.length>0">
         <ul class="mui-table-view  mui-media">
