--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -1,6 +1,6 @@
 <div class="page-bus" >
     <header class="mui-bar mui-bar-nav">
-        <h5 class="mui-title">{{bus.sn}}
+        <h5 class="mui-title">{{bus.name}}
         </h5>
         <a class=" mui-icon mui-icon-left-nav mui-pull-left" v-on="click:backTo('search/result')"></a>
         <a class="mui-icon  mui-icon-home-filled mui-pull-right" href="#search"></a>
