--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -32,7 +32,7 @@
     
     <div v-show="result.length==0" class="mui-content-padded mui-text-center" style="padding-top: 50px;">
         <img src="/static/images/noticket.gif">
-        <div>对不起，没有车了,您可选择其他日期。</div>
+        <div>对不起，没有车了，您可选择其他日期。</div>
     </div>
 
     <nav class="mui-bar mui-bar-tab">
