--- a/src/main/resources/webapp/static/components/page/bus/bus.html
+++ b/src/main/resources/webapp/static/components/page/bus/bus.html
@@ -1,6 +1,7 @@
 <div class="page-bus" >
     <header class="mui-bar mui-bar-nav">
-        <h5 class="mui-title">{{bus.name}}
+        <h5 class="mui-title" style="line-height: 18px;margin-top: 5px;">{{bus.name}}
+            <p>{{bus.line}} {{bus.goff}}</p>
         </h5>
         <a class=" mui-icon mui-icon-left-nav mui-pull-left" v-on="click:backTo('search/result')"></a>
         <a class="mui-icon  mui-icon-home-filled mui-pull-right" href="#search"></a>
@@ -16,18 +17,22 @@
     <div class=" mui-scroll-wrapper" style="top:95px;">
         <div class="mui-scroll" >
             <div class="bus-header">
-                <span>车头方向</span>
+                <img class="bus-driver" src="/static/images/bus-driver.png">
                 <a class="void"></a> 可选
                 <a class="order"></a> 已选
+
+                <span class="bus-door">前门</span>
             </div>
             <table class="bus-body">
                 <tr v-repeat="r in bus.rows">
                     <td v-repeat="bus.cols" class="seat" data-id="{{getSeatId(r,$index)}}"  v-on="click:selectSeat(this,r,$index)" v-class="seatClass(r,$index)" style="position: relative;">
-                        <a class="iconfont" v-text="getText(r,$index)"  ></a>
+                        <a  v-text="getText(r,$index)"  ></a>
                         <p class="user-name" v-text="getSeatUserName(r,$index)"></p>
                     </td>
                 </tr>
             </table>
+
+            <span class="bus-backDoor"></span>
 
             <ul class="mui-table-view silder-nav" style="">
                 <li class="mui-table-view-cell" v-repeat="bus.rows">
