--- a/src/main/resources/webapp/static/pkg/all.css
+++ b/src/main/resources/webapp/static/pkg/all.css
@@ -33,6 +33,8 @@
     background-color: #fff; }
   .page-bus .mui-scroll-wrapper {
     background-color: #fff; }
+    .page-bus .mui-scroll-wrapper .mui-scroll {
+      padding-bottom: 50px; }
   .page-bus .mui-scroll {
     padding: 10px;
     background-color: #fff; }
@@ -51,7 +53,7 @@
       width: 20px;
       margin-right: 5%;
       color: #fff;
-      background-color: #929292; }
+      background-color: #B8BA98; }
     .page-bus .bus-header a {
       height: 15px;
       width: 15px;
@@ -67,7 +69,7 @@
     text-align: center;
     background-color: #fff; }
     .page-bus .bus-body .bus-text {
-      background-color: #929292;
+      background-color: #B8BA98;
       float: right;
       padding: 4px;
       margin-right: 15px; }
@@ -638,6 +640,8 @@ select.form-control {
     background-color: #fff; }
   .page-bus .mui-scroll-wrapper {
     background-color: #fff; }
+    .page-bus .mui-scroll-wrapper .mui-scroll {
+      padding-bottom: 50px; }
   .page-bus .mui-scroll {
     padding: 10px;
     background-color: #fff; }
@@ -656,7 +660,7 @@ select.form-control {
       width: 20px;
       margin-right: 5%;
       color: #fff;
-      background-color: #929292; }
+      background-color: #B8BA98; }
     .page-bus .bus-header a {
       height: 15px;
       width: 15px;
@@ -672,7 +676,7 @@ select.form-control {
     text-align: center;
     background-color: #fff; }
     .page-bus .bus-body .bus-text {
-      background-color: #929292;
+      background-color: #B8BA98;
       float: right;
       padding: 4px;
       margin-right: 15px; }
