--- a/src/main/resources/webapp/admin/static/components/page/user/user.html
+++ b/src/main/resources/webapp/admin/static/components/page/user/user.html
@@ -86,6 +86,7 @@
                                 <select class="input" v-model="user.admin" number>
                                     <option value=0>普通用户</option>
                                     <option value=1>管理员</option>
+									<option value=3>订票员</option>
                                 </select>
                             </div>
                         </div>
