--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -58,17 +58,16 @@
                 <ul class="mui-table-view mui-list" style="margin-top: 25px;margin-bottom: 60px;">
                     <i class=" mui-pull-left iconfont icon-time"></i>
                     <li class="mui-table-view-cell">
-                        <a class="mui-navigate-right" >
+                        <a class="#mui-navigate-right" >
                             历史订单
-                            <span class="mui-badge">接口开发中</span>
+                            <span class="mui-badge">开发中</span>
                         </a>
                     </li>
                     <i class=" mui-pull-left iconfont icon-target"></i>
                     <li class="mui-table-view-cell mui-media">
-                        <a class="mui-navigate-right" >
-                            <div class="mui-media-body">
-                                帮助文档
-                            </div>
+                        <a class="#mui-navigate-right" >
+                            帮助文档
+							<span class="mui-badge">编辑中</span>
                         </a>
                     </li>
                 </ul>
