--- a/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
+++ b/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
@@ -15,7 +15,7 @@
             </div>
             <div class="mui-input-group">
                 <div class="mui-input-row">
-                    <label>身份证</label>
+                    <label>身份证（后四位）</label>
                     <input type="text" class="mui-input-clear" v-model="rel.sn" placeholder="请输入身份证">
                 </div>
             </div>
