--- a/src/main/resources/webapp/static/components/page/order/order.css
+++ b/src/main/resources/webapp/static/components/page/order/order.css
@@ -1,6 +1,11 @@
 .page-order {
-  height: 100%; }
-  .page-order .mui-control-content {
-    height: 100%; }
-    .page-order .mui-control-content .mui-content {
-      padding-bottom: 50px; }
+  height: 100%;
+}
+
+.page-order .mui-control-content {
+  height: 100%;
+}
+
+.page-order .mui-control-content .mui-content {
+  padding-bottom: 50px;
+}
