--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -11,12 +11,12 @@
         <h5 class="mui-content-padded">
             {{result.length}}/{{result.length}}车次
         </h5>
-        <ul class="mui-table-view">
+        <ul class="mui-table-view" style='padding-bottom: 50px;'>
             <li class="mui-table-view-cell mui-media" v-repeat="r in result">
                 <a class="mui-navigate-right" v-on="click:selectBus(r.id,search.date)">
                     <img style="max-width: 62px;width: 62px;height: 62px;" class="mui-media-object mui-pull-left" v-attr="src:r.src||'/admin/static/images/128.png'">
                     <div class="mui-media-body">
-                        <h4 style="color: blue;font-weight: bold;font-size: 20px;"> {{r.line}}</h4>
+                        <h4 style="font-weight: bold;font-size: 16px;color: #007aff;"> {{r.line}}</h4>
                         <div style="color: green">{{r.name}} {{r.order}}/{{r.void + r.order}}</div>
                         <p>
                             {{r.date}}至{{r.arrive}}
