--- a/src/main/resources/webapp/static/components/page/search/search.css
+++ b/src/main/resources/webapp/static/components/page/search/search.css
@@ -1,16 +1,22 @@
 .page-search {
-  height: 100%; }
-  .page-search .mui-control-content {
-    height: 100%; }
-    .page-search .mui-control-content .mui-content {
-      padding-bottom: 50px; }
+  height: 100%;
+}
+
+.page-search .mui-control-content {
+  height: 100%;
+}
+
+.page-search .mui-control-content .mui-content {
+  padding-bottom: 50px;
+}
 
 .x-control-group {
   width: auto;
   height: auto;
   padding: 0.625em;
   box-sizing: border-box;
-  background: #ffffff; }
+  background: #ffffff;
+}
 
 .x-control-group-title {
   background-color: #f5f5f5;
@@ -20,10 +26,12 @@
   color: #555555;
   font-weight: bold;
   font-size: 1.125em;
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 .x-label-edit {
-  padding: 0.5em 0; }
+  padding: 0.5em 0;
+}
 
 .x-label-edit, .x-label-edit.x-label-left {
   display: -webkit-box;
@@ -45,13 +53,16 @@
   -ms-flex-align: center;
   flex-align: center;
   align-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 .x-label20.x-label-edit .x-label {
-  width: 30%; }
+  width: 30%;
+}
 
 .x-label-edit .x-label {
-  display: block; }
+  display: block;
+}
 
 .x-label {
   margin: 0;
@@ -59,21 +70,25 @@
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
-  font-weight: normal; }
+  font-weight: normal;
+}
 
 label {
   display: inline-block;
   max-width: 100%;
   margin-bottom: 5px;
-  font-weight: bold; }
+  font-weight: bold;
+}
 
 .x-label20.x-label-edit .x-edit {
-  width: 70%; }
+  width: 70%;
+}
 
 .x-label-edit .x-edit {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
-  flex: 1; }
+  flex: 1;
+}
 
 select.form-control {
   -webkit-appearance: textfield;
@@ -84,7 +99,8 @@ select.form-control {
   text-indent: 0px;
   background-image: url(/static/images/chevron.png);
   background-repeat: no-repeat;
-  background-position: 100%; }
+  background-position: 100%;
+}
 
 .form-control {
   display: block;
@@ -98,16 +114,21 @@ select.form-control {
   background-image: none;
   border: 1px solid #eee;
   border-radius: 4px;
-  margin: 0; }
+  margin: 0;
+}
 
 .form-control:focus {
   border-color: #356635;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b; }
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 6px #7aba7b;
+}
 
 .data-list {
-  padding: 0; }
-  .data-list li {
-    list-style: none;
-    height: 32px;
-    background-color: #fff; }
+  padding: 0;
+}
+
+.data-list li {
+  list-style: none;
+  height: 32px;
+  background-color: #fff;
+}
