--- a/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
+++ b/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
@@ -2,7 +2,7 @@
     <header class="mui-bar mui-bar-nav">
         <a class="mui-icon mui-icon-left-nav mui-pull-left" v-on="click:backTo('relation')"></a>
         <h5 class="mui-title">
-            添加亲属
+            添加非公司人员
         </h5>
     </header>
     <div class="mui-content">
