--- a/src/main/resources/webapp/static/components/page/relation/relation.html
+++ b/src/main/resources/webapp/static/components/page/relation/relation.html
@@ -2,13 +2,13 @@
     <header class="mui-bar mui-bar-nav">
         <a class="mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
         <h5 class="mui-title">
-            联系人
+            代订座人
         </h5>
         <a class="mui-pull-right mui-icon mui-icon-refresh" v-on="click:reload"></a>
     </header>
     <div class="mui-content">
         <h5 class="mui-content-padded">
-            每个用户最多可以绑定四个联系人
+            每个用户最多可以绑定四个代订座人
         </h5>
         <ul class="mui-table-view">
             <li class="mui-table-view-cell mui-media" v-repeat="u in delegations">
@@ -25,7 +25,7 @@
         </ul>
         <div style="padding: 15px;">
 
-            <a style="padding: 5px;" v-if="delegations.length<2" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/query">
+            <a style="padding: 5px;" v-if="(delegations.length+relatives.length)<4" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/query">
                 <span class="mui-icon mui-icon-plus"></span>
                 添加本公司人员</a>
         </div>
@@ -44,7 +44,7 @@
             </li>
         </ul>
         <div style="padding: 15px;">
-            <a style="padding: 5px;" v-if="relatives.length<2" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/relatives">
+            <a style="padding: 5px;" v-if="(delegations.length+relatives.length)<4" class="mui-btn mui-btn-primary mui-btn-block" href="#relation/relatives">
                 <span class="mui-icon mui-icon-plus"></span>
                 添加非本公司人员</a>
         </div>
