--- a/src/main/resources/webapp/admin/static/components/page/system/config.html
+++ b/src/main/resources/webapp/admin/static/components/page/system/config.html
@@ -14,16 +14,16 @@
 			</label>
 
 			<label>
-				订座截止时间[昌江]（小时）：
+				订座截止时间[海口→昌江]（小时）：
 				<input type="text" class="input" number v-model="data.config.end['昌江']">
 			</label>
 
 			<label>
-				订座截止时间[海口]（小时）：
+				订座截止时间[昌江→海口]（小时）：
 				<input type="text" class="input" number v-model="data.config.end['海口']">
 			</label>
 
-			海口<br/>
+			昌江→海口<br/>
 			周一<br/>
 					<label>
 						最初开启车辆数量：
@@ -40,7 +40,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][0].maximum">
 					</label>
 
-			海口<br/>
+			昌江→海口<br/>
 			周二<br/>
 					<label>
 						最初开启车辆数量：
@@ -57,7 +57,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][1].maximum">
 					</label>
 			
-			海口<br/>
+			昌江→海口<br/>
 			周三<br/>
 					<label>
 						最初开启车辆数量：
@@ -74,7 +74,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][2].maximum">
 					</label>
 			
-			海口<br/>
+			昌江→海口<br/>
 			周四<br/>
 					<label>
 						最初开启车辆数量：
@@ -91,7 +91,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][3].maximum">
 					</label>
 			
-			海口<br/>
+			昌江→海口<br/>
 			周五<br/>
 					<label>
 						最初开启车辆数量：
@@ -108,7 +108,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][4].maximum">
 					</label>
 			
-			海口<br/>
+			昌江→海口<br/>
 			周六<br/>
 					<label>
 						最初开启车辆数量：
@@ -125,7 +125,7 @@
 						<input type="text" class="input" number v-model="data.quota['海口'][5].maximum">
 					</label>
 			
-			海口<br/>
+			昌江→海口<br/>
 			周日<br/>
 					<label>
 						最初开启车辆数量：
@@ -144,7 +144,7 @@
 			
 			
 
-			昌江<br/>
+			海口→昌江<br/>
 			周一<br/>
 					<label>
 						最初开启车辆数量：
@@ -161,7 +161,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][0].maximum">
 					</label>
 
-			昌江<br/>
+			海口→昌江<br/>
 			周二<br/>
 					<label>
 						最初开启车辆数量：
@@ -178,7 +178,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][1].maximum">
 					</label>
 			
-			昌江<br/>
+			海口→昌江<br/>
 			周三<br/>
 					<label>
 						最初开启车辆数量：
@@ -195,7 +195,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][2].maximum">
 					</label>
 			
-			昌江<br/>
+			海口→昌江<br/>
 			周四<br/>
 					<label>
 						最初开启车辆数量：
@@ -212,7 +212,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][3].maximum">
 					</label>
 			
-			昌江<br/>
+			海口→昌江<br/>
 			周五<br/>
 					<label>
 						最初开启车辆数量：
@@ -229,7 +229,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][4].maximum">
 					</label>
 			
-			昌江<br/>
+			海口→昌江<br/>
 			周六<br/>
 					<label>
 						最初开启车辆数量：
@@ -246,7 +246,7 @@
 						<input type="text" class="input" number v-model="data.quota['昌江'][5].maximum">
 					</label>
 			
-			昌江<br/>
+			海口→昌江<br/>
 			周日<br/>
 					<label>
 						最初开启车辆数量：
