--- a/src/main/resources/webapp/admin/static/components/page/check/ticketsStats/ticketsStats.html
+++ b/src/main/resources/webapp/admin/static/components/page/check/ticketsStats/ticketsStats.html
@@ -2,6 +2,7 @@
  <table class="table">
   <tbody><tr>
    <th width="200">名称</th>
+   <th width="300">线路</th>
    <th width="100">可预订</th>
    <th width="100">已预订</th>
    <th width="100">总座位</th>
@@ -12,8 +13,11 @@
   <table class="table table-hover">
    <tbody>
    <tr v-repeat="b in tStats" >
-    <td width="200">
+    <td width="300">
      {{b.name}}
+    </td>
+	<td width="200">
+     {{b.line}}
     </td>
     <td width="100">
      {{b.void}}
