--- a/src/main/resources/webapp/admin/static/components/page/check/busSeat/busSeat.html
+++ b/src/main/resources/webapp/admin/static/components/page/check/busSeat/busSeat.html
@@ -3,7 +3,7 @@
 		@page { size: A4 portrait;}
 		.lefter {display:none;}
 		#admin-nav{display:none;}
-		.admin { left:0; top:0; padding: 0;}
+		.admin { left:0; top:0; padding: 0;width: 100%;}
 		.printer {display:none;}
 		.bus-body { width: auto;}
 		.page-companyOrder {padding: 0;}
