--- a/src/main/resources/webapp/admin/static/components/page/companyOrder/companyOrder.html
+++ b/src/main/resources/webapp/admin/static/components/page/companyOrder/companyOrder.html
@@ -8,7 +8,7 @@
 
                             <div class="field">
                                 <select class="input" v-model="selectCompany" options="companies">
-                                    <option >请选择承包商</option>
+                                    <option >请选择合作单位</option>
                                 </select>
                             </div>
                         </div>
