--- a/src/main/resources/webapp/static/components/page/config/config.html
+++ b/src/main/resources/webapp/static/components/page/config/config.html
@@ -30,7 +30,7 @@
 
                     <i class=" mui-pull-left iconfont icon-tuangou"></i>
                     <li class="mui-table-view-cell">
-                        <a class="mui-navigate-right" href="#company">承包商订位查询
+                        <a class="mui-navigate-right" href="#company">合作单位订位查询
                         </a>
                     </li>
 
@@ -65,9 +65,8 @@
                     </li>
                     <i class=" mui-pull-left iconfont icon-target"></i>
                     <li class="mui-table-view-cell mui-media">
-                        <a class="#mui-navigate-right" >
+                        <a href="http://mp.weixin.qq.com/s?__biz=MzIxOTEwMDcwOQ==&mid=400376477&idx=1&sn=aaf861f22ac9ffc3a18bf13eaf858eb7&scene=18#wechat_redirect" class="#mui-navigate-right" >
                             帮助文档
-							<span class="mui-badge">编辑中</span>
                         </a>
                     </li>
                 </ul>
