--- a/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
+++ b/src/main/resources/webapp/static/components/page/relation/relatives/relatives.html
@@ -54,7 +54,7 @@
             </div>
 
         </div>
-        <h5 class="mui-content-padded mui-text-center">如为承包商请填写单位名称</h5>
+        <h5 class="mui-content-padded mui-text-center">如为合作单位请填写单位名称</h5>
         <div style="padding: 15px;">
             <a  style="padding: 5px" class="mui-btn mui-btn-primary mui-btn-block" v-on="click:addRel">
                 <span class="mui-icon mui-icon-plus"></span>
