--- a/src/main/resources/webapp/admin/static/components/page/check/check.html
+++ b/src/main/resources/webapp/admin/static/components/page/check/check.html
@@ -25,6 +25,8 @@
                             </div>
                         </div>
                         <span class="badge bg-sub">{{selectCalendar}}</span>
+                        <span class="badge bg-sub">{{busname}}</span>
+                        <span class="badge bg-sub">{{line}}</span>
                     </div>
                 </div>
 
