--- a/src/main/resources/webapp/admin/static/components/page/check/ticketsStats/ticketsStats.html
+++ b/src/main/resources/webapp/admin/static/components/page/check/ticketsStats/ticketsStats.html
@@ -29,7 +29,7 @@
      {{b.order + b.void}}
     </td>
     <td width="*">
-     <a  class="button border-blue button-little" v-on="click:getBusSeat(b.id)" href="javascript:;">查看</a>
+     <a  class="button border-blue button-little" v-on="click:getBusSeat(b)" href="javascript:;">查看</a>
     </td>
    </tr>
    </tbody>
