--- a/src/main/resources/webapp/admin/static/components/page/home/home.css
+++ b/src/main/resources/webapp/admin/static/components/page/home/home.css
@@ -1,14 +1,11 @@
 body {
-  background-color: #f2f9fd;
-}
+  background-color: #f2f9fd; }
 
 .panel {
-  background: #fff;
-}
+  background: #fff; }
 
 form .form-group:last-child {
-  padding-bottom: 0;
-}
+  padding-bottom: 0; }
 
 .passcode {
   position: absolute;
@@ -19,8 +16,7 @@ form .form-group:last-child {
   border-left: solid 1px #ddd;
   text-align: center;
   line-height: 32px;
-  border-radius: 0 4px 4px 0;
-}
+  border-radius: 0 4px 4px 0; }
 
 .lefter {
   position: relative;
@@ -28,71 +24,58 @@ form .form-group:last-child {
   width: 180px;
   margin-right: -180px;
   background: #e6f2fb;
-  text-align: center;
-}
+  text-align: center; }
 
 .righter {
   float: right;
   width: 100%;
   padding-top: 15px;
-  background: #e6f2fb;
-}
+  background: #e6f2fb; }
 
 .mainer {
-  margin-left: 180px;
-}
+  margin-left: 180px; }
 
 .logo {
   border-bottom: solid 1px #b5cfd9;
-  padding: 23px 10px;
-}
+  padding: 23px 10px; }
 
 .admin-navbar {
   border-bottom: solid 5px #09c;
-  padding: 0 15px;
-}
+  padding: 0 15px; }
 
 .admin-nav li {
-  display: inline-block;
-}
+  display: inline-block; }
 
 .admin-nav ul {
-  display: none;
-}
+  display: none; }
 
 .admin-nav ul li {
   float: none;
-  display: block;
-}
+  display: block; }
 
 .admin-nav ul ul li {
   list-style: circle;
-  margin-left: 15px;
-}
+  margin-left: 15px; }
 
 .admin-nav .active a {
   background: #09c;
   color: #fff;
-  border-radius: 4px 4px 0 0;
-}
+  border-radius: 4px 4px 0 0; }
 
 .admin-nav .active ul {
   display: block;
   position: fixed;
   left: 0;
   width: 180px;
-  margin-top: 41px;
-}
+  margin-top: 41px; }
 
 .admin-nav .active ul a {
   background: transparent;
   color: #333;
-  border-radius: 0;
-}
+  border-radius: 0; }
 
 .admin-nav .active .active a {
-  background: #e6f2fb;
-}
+  background: #e6f2fb; }
 
 .admin-nav .active li.active:before {
   content: " ";
@@ -100,8 +83,7 @@ form .form-group:last-child {
   position: absolute;
   width: 100%;
   top: 0;
-  background-color: #b5cfd9;
-}
+  background-color: #b5cfd9; }
 
 .admin-nav .active li.active:after {
   content: " ";
@@ -109,26 +91,22 @@ form .form-group:last-child {
   position: absolute;
   width: 100%;
   bottom: 0;
-  background-color: #b5cfd9;
-}
+  background-color: #b5cfd9; }
 
 .admin-bread {
   background: #f2f9fd;
   border-left: solid 1px #b5cfd9;
   border-bottom: solid 1px #b5cfd9;
-  line-height: 20px;
-}
+  line-height: 20px; }
 
 .admin-bread .bread {
-  margin-bottom: 0;
-}
+  margin-bottom: 0; }
 
 .admin-bread span {
   float: right;
   font-size: 12px;
   color: #666;
-  line-height: 36px;
-}
+  line-height: 36px; }
 
 .admin {
   padding: 30px;
@@ -139,21 +117,16 @@ form .form-group:last-child {
   bottom: 0;
   top: 87px;
   left: 180px;
-  overflow: auto;
-}
+  overflow: auto; }
 
 .alert {
-  margin-bottom: 20px;
-}
+  margin-bottom: 20px; }
 
 .admin-panel td {
-  line-height: 24px;
-}
+  line-height: 24px; }
 
 .admin-panel td .button {
-  line-height: 16px;
-}
+  line-height: 16px; }
 
 .admin-panel .pagination .active {
-  background: #fff;
-}
+  background: #fff; }
