--- a/src/main/resources/webapp/admin/static/components/page/order/order.css
+++ b/src/main/resources/webapp/admin/static/components/page/order/order.css
@@ -1,10 +1,8 @@
 .dateBlock {
-  text-align: center;
-}
+  text-align: center; }
 
 .dateActive {
   padding-left: 0;
   padding-right: 0;
   background-color: #00AAEE;
-  font-weight: bold;
-}
+  font-weight: bold; }
