--- a/src/main/resources/webapp/static/components/page/company/company.html
+++ b/src/main/resources/webapp/static/components/page/company/company.html
@@ -2,7 +2,7 @@
     <div class="mui-control-content mui-active" v-show="!isQuery">
         <header class="mui-bar-nav mui-bar">
             <h5 class="mui-title">
-                承包商订位查询
+                合作单位订位查询
             </h5>
             <a class="mui-icon mui-icon-left-nav mui-pull-left" href="#config"></a>
         </header>
@@ -10,7 +10,7 @@
             <ul class="mui-table-view mui-list">
                 <i class=" iconfont icon-users"></i>
                 <li class="mui-table-view-cell">
-                    <a >承包商
+                    <a >合作单位
                         <select class="company-select" v-model="selectCompany" options="companies">
                             <option>请选择</option>
                         </select>
