--- a/src/main/resources/webapp/static/components/page/validate/validate.css
+++ b/src/main/resources/webapp/static/components/page/validate/validate.css
@@ -1,37 +1,27 @@
 @charset "UTF-8";
 .page-service {
-  height: 100%;
-}
-
-.page-service .mui-control-content {
-  height: 100%;
-}
-
-.page-service .mui-control-content .mui-content {
-  padding-bottom: 50px;
-}
+  height: 100%; }
+  .page-service .mui-control-content {
+    height: 100%; }
+    .page-service .mui-control-content .mui-content {
+      padding-bottom: 50px; }
 
 @-webkit-keyframes twinkling {
   /*透明度由0到1*/
   0% {
-    background-color: yellow;
-  }
+    background-color: yellow; }
+
   60% {
-    background-color: #ccc;
-  }
-}
+    background-color: #ccc; } }
 
 @keyframes twinkling {
   /*透明度由0到1*/
   0% {
-    background-color: yellow;
-  }
+    background-color: yellow; }
+
   60% {
-    background-color: #ccc;
-  }
-}
+    background-color: #ccc; } }
 
 .twinkling {
   -webkit-animation: twinkling 2s infinite ease;
-  animation: twinkling 2s infinite ease;
-}
+  animation: twinkling 2s infinite ease; }
