--- a/src/main/resources/webapp/static/components/page/search/result/result.html
+++ b/src/main/resources/webapp/static/components/page/search/result/result.html
@@ -7,11 +7,11 @@
         <a class="mui-icon mui-icon-refresh mui-pull-right" v-on="click:getResult"></a>
     </header>
 
-    <div class="mui-content" v-show="result.length>0">
+    <div class="mui-content" v-show="result.length>0" style='padding-bottom: 50px;'>
         <h5 class="mui-content-padded">
             {{result.length}}/{{result.length}}车次
         </h5>
-        <ul class="mui-table-view" style='margin-bottom: 50px;'>
+        <ul class="mui-table-view" >
             <li class="mui-table-view-cell mui-media" v-repeat="r in result">
                 <a class="mui-navigate-right" v-on="click:selectBus(r.id,search.date)">
                     <img style="max-width: 62px;width: 62px;height: 62px;" class="mui-media-object mui-pull-left" v-attr="src:r.src||'/admin/static/images/128.png'">
