源代码提交

--- a/src/main/resources/sources/admin/components/page/index.html
+++ b/src/main/resources/sources/admin/components/page/index.html
@@ -23,6 +23,7 @@
     <script src="/static/js/respond.js"></script>
     <script src="/static/js/mod.js"></script>
     <script src="/static/js/lrz.pc.min.js"></script>
+    <script src="/static/js/laydate/laydate.js"></script>
 <script type="text/javascript">
     var CONFIG = {
         OFFTIME:"16:00"
