--- a/src/main/resources/sources/admin/components/page/company/company.html
+++ b/src/main/resources/sources/admin/components/page/company/company.html
@@ -9,6 +9,17 @@
             <div class="form-inline">
                 <div class="form-group">
                     <div class="label">
+                        用户类型：
+                    </div>
+                    <div class="field">
+                        <select class="input" v-model="user.booktype">
+                            <option value="0" >长期用户</option>
+                            <option value="1">短期用户</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="label">
                         合作单位：
                     </div>
                     <div class="field">
@@ -16,7 +27,6 @@
                             <option value="0">
                                 请选择条件筛选
                             </option>
-
                         </select>
                     </div>
                 </div>
@@ -26,30 +36,36 @@
             <input type="button" class="button button-small bg-main "  data-target="#user-dialog" style="float: right" data-mask="1" data-width="50%"  v-on="click:addUser" value="新增用户" />
         </div>
         <table class="table table-hover">
-            <tr><th width="150">用户名</th><th width="*">合作单位</th><th width="200">手机号码</th><th width="100">操作</th></tr>
+            <tr><th width="150">用户名</th>
+                <th width="*" v-show="user.booktype==0">邮箱</th>
+                <th width="200">合作单位</th>
+                <th width="200">手机号码</th>
+                <th width="100">用户类型</th>
+                <th width="120" v-show="user.booktype==1">到期时间</th>
+                <th width="120">状态</th>
+                <th width="100">操作</th></tr>
             <tr v-repeat="c in users">
                 <td>{{c.name}}</td>
+                <td v-show="user.booktype==0">{{c.email}}</td>
                 <td>{{c.company}}</td>
                 <td>{{c.mobile}}</td>
+                <td>{{c.booktype==1?"短期用户":"长期用户"}}</td>
+                <td v-show="user.booktype==1">{{c.effective}}</td>
+                <td><span class="badge bg-green">审核通过</span></td>
                 <td><a v-on="click:editUser(c)" class="button border-blue button-little" href="javascript:;">修改</a> <a class="button border-yellow button-little" v-on="click:delUser(c._id)" href="javascript:;">删除</a> </td></tr>
         </table>
 
-        <div class="panel-foot text-center">
-            <ul class="pagination"><li><a href="javascript:;" v-on="click:prevPage">上一页</a></li></ul>
-            <ul class="pagination pagination-group">
-                <li v-on="click:toPage" v-repeat="parseInt(((count-1)/limit))+1" v-class="active:$index == (page)"><a href="javascript:;">{{$index+1}}</a></li>
-            </ul>
-            <ul class="pagination"><li><a href="javascript:;" v-on="click:nextPage">下一页</a></li></ul>
-        </div>
+        <c-pager count="{{@ count}}" limit="{{@ limit}}" page="{{@ page}}"></c-pager>
 
         <div class="dialog-mask" style="display: none;"></div>
+
         <div id="company-dialog" class="dialog-win" style="position: fixed; width: 50%; z-index: 11;display: none;">
             <div class="dialog open">
                 <div class="dialog-head">
                     <span class="close" v-on="click:closeDialog"></span>
                     <strong>{{user._type}}</strong>
                 </div>
-                <div class="dialog-body">
+                <div class="dialog-body" v-show="user.booktype==0">
                     <div class="form-x">
                         <div class="form-group">
                             <div class="label">
@@ -71,11 +87,60 @@
                         </div>
                         <div class="form-group">
                             <div class="label">
+                                邮箱
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.email" placeholder="请填写邮箱">
+                                <div v-show="!validation.email" class="input-help  check-error"><ul><li>请填写正确邮箱格式</li></ul></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
                                 手机号
                             </div>
                             <div class="field">
                                 <input type="text" class="input" v-model="user.mobile" placeholder="请填写手机号">
                                 <div v-show="!validation.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="dialog-body" v-show="user.booktype==1">
+                    <div class="form-x">
+                        <div class="form-group">
+                            <div class="label">
+                                用户名
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.name" placeholder="请填写用户名">
+                                <div v-show="!validation2.name" class="input-help  check-error"><ul><li>必填</li></ul></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
+                                合作单位
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.company" placeholder="请填写合作单位名称">
+                                <div v-show="!validation2.company" class="input-help  check-error"><ul><li>必填</li></ul></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
+                                手机号
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" v-model="user.mobile" placeholder="请填写手机号">
+                                <div v-show="!validation2.mobile" class="input-help  check-error"><ul><li>请填写正确手机号码</li></ul></div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="label">
+                                到期时间
+                            </div>
+                            <div class="field">
+                                <input type="text" class="input" id="effective" v-model="user.effective" placeholder="请填写到期时间">
+                                <div v-show="!validation2.effective" class="input-help  check-error"><ul><li>必填</li></ul></div>
                             </div>
                         </div>
                     </div>
