--- a/src/main/resources/sources/admin/components/page/history/history.html
+++ b/src/main/resources/sources/admin/components/page/history/history.html
@@ -16,13 +16,7 @@
             </tr>
         </table>
 
-        <div class="panel-foot text-center">
-            <ul class="pagination"><li><a href="javascript:;" v-on="click:prevPage">上一页</a></li></ul>
-            <ul class="pagination pagination-group">
-                <li v-on="click:toPage" v-repeat="parseInt(((count-1)/limit))+1" v-class="active:$index == (page)"><a href="javascript:;">{{$index+1}}</a></li>
-            </ul>
-            <ul class="pagination"><li><a href="javascript:;" v-on="click:nextPage">下一页</a></li></ul>
-        </div>
+        <c-pager count="{{@ count}}" limit="{{@ limit}}" page="{{@ page}}"></c-pager>
 
     </div>
 
