--- a/src/main/resources/sources/front/components/page/search/result/result.html
+++ b/src/main/resources/sources/front/components/page/search/result/result.html
@@ -11,7 +11,7 @@
         <h5 class="mui-content-padded">
             {{result.length}}/{{result.length}}车次
         </h5>
-        <ul class="mui-table-view" style='margin-bottom: 50px;'>
+        <ul class="mui-table-view">
             <li class="mui-table-view-cell mui-media" v-repeat="r in result">
                 <a class="mui-navigate-right" v-on="click:selectBus(r.id,search.date)">
                     <img style="max-width: 62px;width: 62px;height: 62px;" class="mui-media-object mui-pull-left" v-attr="src:r.src||'/admin/static/images/128.png'">
@@ -28,6 +28,7 @@
                 </a>
             </li>
         </ul>
+        <div style="height:50px;"></div>
     </div>
     
     <div v-show="result.length==0" class="mui-content-padded mui-text-center" style="padding-top: 50px;">
