--- a/src/main/resources/webapp/static/components/page/order/order.html
+++ b/src/main/resources/webapp/static/components/page/order/order.html
@@ -15,8 +15,8 @@
                             <a>
                                 <img style="width: 42px;" class="mui-media-object mui-pull-left" v-attr="src:o.bus.src||'/admin/static/images/128.png'">
                                 <div class="mui-media-body">
-                                    <h4 style="color: blue;font-weight: bold;font-size: 14px;"> {{o.bus.line}}</h4>
-                                    <p class="mui-ellipsis">{{o.user.name}}<span v-show="o.source" class="mui-badge mui-badge-warning">代</span> {{o.bus.name}} {{o.seat.sn}}座 {{o.bus.goff}} 出发</p>
+                                    <h4 class="mui-ellipsis-2"  style="color: blue;font-weight: bold;font-size: 14px;"> {{o.bus.line}}</h4>
+                                    <p class="mui-ellipsis-2" style="padding-right: 55px;">{{o.user.name}}<span v-show="o.source" class="mui-badge mui-badge-warning">代</span> {{o.bus.name}} {{o.seat.sn}}座 {{o.bus.goff}} 出发</p>
                                 </div>
                                 <button v-show="canRefund(o)" class="mui-btn mui-btn-negative mui-btn-outlined" v-on="click:unSub(o)">
                                     退订
